exclude the comments folder

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ var/
 .installed.cfg
 *.egg
 .idea/
+comments/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
